--- a/intro.html
+++ b/intro.html
@@ -31,18 +31,17 @@
                 <h1>MY INTRODUCTION</h1>
                 <div class="introitem">
                     <p>
-                        Hello and welcome! I'm Suraj Kumar, a passionate Web Developer with a keen eye for [Your Unique Skill or Specialty].</br>
+                        Hello and welcome! I'm Suraj Kumar, a passionate Web Developer with a keen eye for web development and web designing.</br>
                         As you browse through my portfolio, I invite you to journey with me through my experiences, projects, and creative endeavors.</br>
-                        From a young age, I've been drawn to the world of [Your Field], where I found my true calling in Web Developer and DSA .</br>
-                        Over the years, I've honed my skills through hands-on experience, formal education, and a relentless pursuit of excellence.What sets</br>
-                        me apart is my unwavering dedication to [Core Value or Principle].Whether it's crafting compelling narratives, designing captivating</br>
-                        visuals, or solving complex problems,I approach each project with a blend of creativity, strategy, and meticulous attention to detail.</br>
-                        Throughout my career, I've had the privilege of collaborating with a diverse range of clients and partners,each interaction shaping me</br>
-                        into the professional I am today. From startups to multinational corporations,I've thrived in dynamic environments where innovation and collaboration
-                        reign supreme.But beyond the accolades and achievements lies a deeper commitment—to making a meaningful impact.I believe in the power of 
-                        [Your Belief or Mission Statement], using my skills not only to deliver outstanding results but also to inspire and empower
-                        others along the way.So, whether you're seeking a creative collaborator, a strategic thinker, or a problem-solving extraordinaire,I'm here 
-                        to bring your vision to life. Thank you for joining me on this journey, and I look forward to the opportunity to create something extraordinary together.</br>
+                        From a young age, I've been drawn to the world of web development, where I found my true calling in Web Developer and DSA .</br>
+                        Over the years, I've honed my skills through hands-on experience, formal education, and a relentless pursuit of excellence.</br>
+                        Whether it's crafting compelling narratives, designing captivating visuals, or solving complex problems,I approach each project</br>
+                        with a blend of creativity, strategy, and meticulous attention to detail.Throughout my career, I've had the privilege of collaborating</br>
+                        with a diverse range of clients and partners,each interaction shaping me into the professional I am today. From startups to multinational </br>
+                        corporations,I've thrived in dynamic environments where innovation and collaboration reign supreme.But beyond the accolades and achievements</br>
+                        lies a deeper commitment—to making a meaningful impact.So, whether you're seeking a creative collaborator, a strategic thinker, or a problem-solving</br>
+                        extraordinaire,I'm here to bring your vision to life. Thank you for joining me on this journey, and I look forward to the opportunity to create<br>
+                        something extraordinary together.</br>
                     </p>
                   <h3 class="WR">Warm regards,</br>
                     SURAJ KUMAR</h3>
